# dimsum

./: AUTHORS  CMakeLists.txt  dimsum_config.h.in  readme.md
src/: CMakeLists.txt  compute-row-similarity.cc  dimsumv2.hpp
